# avril

./: CMakeLists.txt  pyproject.toml
src/: _core.cpp
